--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="#FDFDFD"
     android:backgroundTint="#FDFDFD"
-    tools:context=".SecondFragment">
+    tools:context=".mainPageFragments.HomeFragment">
 
 
     <ListView
