--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back"
-    tools:context=".ThirdFragment">
+    tools:context=".mainPageFragments.SettingsFragment">
 
     <Button
         android:id="@+id/buttonPriAndPol"
