--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -7,17 +7,17 @@
 
     <fragment
         android:id="@+id/firstFragment"
-        android:name="com.example.try2.FirstFragment"
+        android:name="com.example.try2.mainPageFragments.ProfileFragment"
         android:label="Profile"
         tools:layout="@layout/fragment_first" />
     <fragment
         android:id="@+id/secondFragment"
-        android:name="com.example.try2.SecondFragment"
+        android:name="com.example.try2.mainPageFragments.HomeFragment"
         android:label="Home"
         tools:layout="@layout/fragment_second" />
     <fragment
         android:id="@+id/thirdFragment"
-        android:name="com.example.try2.ThirdFragment"
+        android:name="com.example.try2.mainPageFragments.SettingsFragment"
         android:label="Settings"
         tools:layout="@layout/fragment_third" />
 </navigation>
