--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -16,9 +16,10 @@
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/lastName"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.829" />
 
     <EditText
         android:id="@+id/lastName"
@@ -63,14 +64,14 @@
         android:id="@+id/password2"
         android:layout_width="210dp"
         android:layout_height="47dp"
+        android:layout_marginTop="276dp"
         android:ems="10"
         android:hint="enter password again"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.387" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonSignUp"
@@ -96,41 +97,85 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonSignUp" />
 
-    <Spinner
-        android:id="@+id/spinner4"
-        android:layout_width="210dp"
-        android:layout_height="33dp"
-        tools:layout_editor_absoluteX="99dp"
-        tools:layout_editor_absoluteY="403dp" />
-
-    <Spinner
-        android:id="@+id/spinner5"
-        android:layout_width="210dp"
-        android:layout_height="33dp"
-        tools:layout_editor_absoluteX="99dp"
-        tools:layout_editor_absoluteY="472dp" />
-
-    <Spinner
-        android:id="@+id/spinner6"
-        android:layout_width="210dp"
-        android:layout_height="33dp"
-        tools:layout_editor_absoluteX="101dp"
-        tools:layout_editor_absoluteY="543dp" />
-
     <TextView
         android:id="@+id/textView15"
         android:layout_width="204dp"
         android:layout_height="29dp"
         android:text="chooese your degree (max 3)"
-        tools:layout_editor_absoluteX="103dp"
-        tools:layout_editor_absoluteY="322dp" />
+        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.478"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password2"
+        app:layout_constraintVertical_bias="0.097" />
 
     <AutoCompleteTextView
-        android:id="@+id/autoCompleteTextView"
-        android:layout_width="205dp"
+        android:id="@+id/autoCompleteDegree1"
+        android:layout_width="183dp"
+        android:layout_height="33dp"
+        app:layout_constraintBottom_toTopOf="@+id/autoCompleteDegree2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.434"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView15"
+        app:layout_constraintVertical_bias="0.481" />
+
+    <AutoCompleteTextView
+        android:id="@+id/autoCompleteDegree2"
+        android:layout_width="183dp"
         android:layout_height="36dp"
-        android:text="AutoCompleteTextView"
-        tools:layout_editor_absoluteX="99dp"
-        tools:layout_editor_absoluteY="367dp" />
+        app:layout_constraintBottom_toTopOf="@+id/autoCompleteDegree3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.434"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView15"
+        app:layout_constraintVertical_bias="0.766" />
+
+    <AutoCompleteTextView
+        android:id="@+id/autoCompleteDegree3"
+        android:layout_width="183dp"
+        android:layout_height="36dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.434"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView15"
+        app:layout_constraintVertical_bias="0.901" />
+
+    <ImageView
+        android:id="@+id/dropDown1"
+        android:layout_width="47dp"
+        android:layout_height="39dp"
+        app:layout_constraintBottom_toBottomOf="@+id/autoCompleteDegree1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.158"
+        app:layout_constraintStart_toEndOf="@+id/autoCompleteDegree1"
+        app:layout_constraintTop_toBottomOf="@+id/textView15"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/dropdown_foreground" />
+
+    <ImageView
+        android:id="@+id/dropDown2"
+        android:layout_width="47dp"
+        android:layout_height="39dp"
+        app:layout_constraintBottom_toBottomOf="@+id/autoCompleteDegree2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.158"
+        app:layout_constraintStart_toEndOf="@+id/autoCompleteDegree2"
+        app:layout_constraintTop_toBottomOf="@+id/dropDown1"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/dropdown_foreground" />
+
+    <ImageView
+        android:id="@+id/dropDown3"
+        android:layout_width="47dp"
+        android:layout_height="39dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.158"
+        app:layout_constraintStart_toEndOf="@+id/autoCompleteDegree3"
+        app:layout_constraintTop_toBottomOf="@+id/dropDown2"
+        app:layout_constraintVertical_bias="0.538"
+        app:srcCompat="@drawable/dropdown_foreground" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
