--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -5,164 +5,153 @@
     android:id="@+id/first"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back_for_profile"
     android:layoutDirection="rtl"
     tools:context=".mainPageFragments.ProfileFragment">
 
     <Button
         android:id="@+id/logoutButton"
-        android:layout_width="400dp"
-        android:layout_height="46dp"
+        android:layout_width="96dp"
+        android:layout_height="40dp"
+        android:backgroundTint="#00FFFFFF"
+        android:fontFamily="sans-serif-black"
         android:onClick="logout"
         android:text="log out"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toTopOf="@+id/profileImage"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.545"
+        app:layout_constraintHorizontal_bias="0.946"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.896" />
+        app:layout_constraintVertical_bias="0.551" />
 
     <ImageView
         android:id="@+id/profileImage"
         android:layout_width="122dp"
         android:layout_height="107dp"
         android:src="@drawable/ic_launcher_profile"
-        app:layout_constraintBottom_toTopOf="@+id/textView11"
+        app:layout_constraintBottom_toTopOf="@+id/titleName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.82" />
+        app:layout_constraintVertical_bias="0.782" />
 
     <TextView
         android:id="@+id/n1"
-        android:layout_width="118dp"
-        android:layout_height="41dp"
-        android:textColor="#000000"
+        android:layout_width="254dp"
+        android:layout_height="56dp"
+        android:background="@drawable/button_for_profile"
+        android:textColor="#3C3F41"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView13"
-        app:layout_constraintEnd_toStartOf="@+id/n2"
-        app:layout_constraintHorizontal_bias="0.451"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.908" />
+        tools:layout_editor_absoluteX="147dp"
+        tools:layout_editor_absoluteY="306dp" />
 
     <TextView
         android:id="@+id/m1"
-        android:layout_width="250dp"
-        android:layout_height="45dp"
-        android:textColor="#000000"
+        android:layout_width="260dp"
+        android:layout_height="47dp"
+        android:background="@drawable/button_for_profile"
+        android:textColor="#3C3F41"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/changeProfile"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.197"
-        app:layout_constraintStart_toEndOf="@+id/imageView6"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.78" />
+        tools:layout_editor_absoluteX="132dp"
+        tools:layout_editor_absoluteY="480dp" />
 
     <TextView
         android:id="@+id/n2"
-        android:layout_width="118dp"
-        android:layout_height="41dp"
-        android:textColor="#000000"
+        android:layout_width="260dp"
+        android:layout_height="49dp"
+        android:background="@drawable/button_for_profile"
+        android:textColor="#3C3F41"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/m1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.778"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.857" />
+        tools:layout_editor_absoluteX="132dp"
+        tools:layout_editor_absoluteY="426dp" />
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="98dp"
-        android:layout_height="28dp"
-        android:text="First Name"
-        app:layout_constraintBottom_toTopOf="@+id/n1"
-        app:layout_constraintEnd_toStartOf="@+id/textView12"
-        app:layout_constraintHorizontal_bias="0.306"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976" />
+        android:layout_width="128dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="264dp"
+        android:fontFamily="sans-serif-black"
+        android:text="FIRST NAME"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/textView12"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleName"
+        app:layout_constraintVertical_bias="0.567" />
 
     <TextView
         android:id="@+id/textView12"
-        android:layout_width="98dp"
-        android:layout_height="28dp"
-        android:text="Last Name"
-        app:layout_constraintBottom_toTopOf="@+id/n2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.766"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profileImage"
-        app:layout_constraintVertical_bias="0.793" />
+        android:layout_width="130dp"
+        android:layout_height="36dp"
+        android:fontFamily="sans-serif-black"
+        android:text="LAST NAME"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        tools:layout_editor_absoluteX="2dp"
+        tools:layout_editor_absoluteY="439dp" />
 
     <TextView
         android:id="@+id/textView13"
         android:layout_width="98dp"
         android:layout_height="28dp"
-        android:text="Email"
-        app:layout_constraintBottom_toTopOf="@+id/m1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.081"
-        app:layout_constraintStart_toEndOf="@+id/imageView6"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        android:fontFamily="sans-serif-black"
+        android:text="EMAIL"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        tools:layout_editor_absoluteX="7dp"
+        tools:layout_editor_absoluteY="499dp" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="400dp"
-        android:layout_height="46dp"
+        android:layout_width="169dp"
+        android:layout_height="44dp"
+        android:background="@drawable/costum_button"
         android:text="reset password"
-        app:layout_constraintBottom_toTopOf="@+id/logoutButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.454"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.981" />
+        tools:layout_editor_absoluteX="28dp"
+        tools:layout_editor_absoluteY="643dp" />
 
     <Button
         android:id="@+id/changeProfile"
-        android:layout_width="400dp"
-        android:layout_height="46dp"
+        android:layout_width="169dp"
+        android:layout_height="44dp"
+        android:background="@drawable/costum_button"
         android:text="change profile"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.545"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.983" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="58dp"
-        android:layout_height="55dp"
-        android:src="@drawable/ic_launcher_profile"
-        app:layout_constraintBottom_toTopOf="@+id/imageView6"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.045"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.847" />
-
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="64dp"
-        android:layout_height="62dp"
-        android:src="@drawable/ic_launcher_email1"
-        app:layout_constraintBottom_toTopOf="@+id/changeProfile"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.046"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.769" />
+        tools:layout_editor_absoluteX="226dp"
+        tools:layout_editor_absoluteY="643dp" />
 
     <TextView
         android:id="@+id/profileDegrees"
-        android:layout_width="269dp"
-        android:layout_height="80dp"
-        app:layout_constraintBottom_toTopOf="@+id/changeProfile"
+        android:layout_width="273dp"
+        android:layout_height="86dp"
+        android:background="@drawable/button_for_profile"
+        android:textColor="#3C3F41"
+        tools:layout_editor_absoluteX="119dp"
+        tools:layout_editor_absoluteY="536dp" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="98dp"
+        android:layout_height="28dp"
+        android:fontFamily="sans-serif-black"
+        android:text="DEGREES"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        tools:layout_editor_absoluteX="7dp"
+        tools:layout_editor_absoluteY="558dp" />
+
+    <TextView
+        android:id="@+id/titleName"
+        android:layout_width="195dp"
+        android:layout_height="50dp"
+        android:fontFamily="sans-serif-black"
+        android:gravity="center"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/n1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/m1" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.656" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
