--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -39,96 +39,127 @@
 
     <TextView
         android:id="@+id/n1"
-        android:layout_width="254dp"
-        android:layout_height="56dp"
+        android:layout_width="255dp"
+        android:layout_height="42dp"
         android:background="@drawable/button_for_profile"
         android:textColor="#3C3F41"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="306dp" />
+        app:layout_constraintBottom_toTopOf="@+id/n2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.923"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.944" />
 
     <TextView
         android:id="@+id/m1"
-        android:layout_width="260dp"
-        android:layout_height="47dp"
+        android:layout_width="255dp"
+        android:layout_height="42dp"
         android:background="@drawable/button_for_profile"
         android:textColor="#3C3F41"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="132dp"
-        tools:layout_editor_absoluteY="480dp" />
+        app:layout_constraintBottom_toTopOf="@+id/profileDegrees"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.923"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.941" />
 
     <TextView
         android:id="@+id/n2"
-        android:layout_width="260dp"
-        android:layout_height="49dp"
+        android:layout_width="255dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="388dp"
+        android:layout_marginBottom="43dp"
         android:background="@drawable/button_for_profile"
         android:textColor="#3C3F41"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="132dp"
-        tools:layout_editor_absoluteY="426dp" />
+        app:layout_constraintBottom_toTopOf="@+id/m1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.923"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView11"
-        android:layout_width="128dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="264dp"
+        android:layout_width="127dp"
+        android:layout_height="25dp"
         android:fontFamily="sans-serif-black"
         android:text="FIRST NAME"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView12"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleName"
-        app:layout_constraintVertical_bias="0.567" />
+        app:layout_constraintVertical_bias="0.725" />
 
     <TextView
         android:id="@+id/textView12"
-        android:layout_width="130dp"
-        android:layout_height="36dp"
+        android:layout_width="120dp"
+        android:layout_height="33dp"
         android:fontFamily="sans-serif-black"
         android:text="LAST NAME"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="2dp"
-        tools:layout_editor_absoluteY="439dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView13"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleName"
+        app:layout_constraintVertical_bias="0.838" />
 
     <TextView
         android:id="@+id/textView13"
-        android:layout_width="98dp"
-        android:layout_height="28dp"
+        android:layout_width="99dp"
+        android:layout_height="23dp"
         android:fontFamily="sans-serif-black"
         android:text="EMAIL"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="7dp"
-        tools:layout_editor_absoluteY="499dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleName"
+        app:layout_constraintVertical_bias="0.82" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="169dp"
         android:layout_height="44dp"
+        android:layout_marginStart="220dp"
+        android:layout_marginBottom="48dp"
         android:background="@drawable/costum_button"
         android:text="reset password"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="643dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/changeProfile"
         android:layout_width="169dp"
         android:layout_height="44dp"
+        android:layout_marginEnd="224dp"
+        android:layout_marginBottom="48dp"
         android:background="@drawable/costum_button"
         android:text="change profile"
-        tools:layout_editor_absoluteX="226dp"
-        tools:layout_editor_absoluteY="643dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/profileDegrees"
-        android:layout_width="273dp"
-        android:layout_height="86dp"
+        android:layout_width="248dp"
+        android:layout_height="87dp"
         android:background="@drawable/button_for_profile"
         android:textColor="#3C3F41"
-        tools:layout_editor_absoluteX="119dp"
-        tools:layout_editor_absoluteY="536dp" />
+        app:layout_constraintBottom_toTopOf="@+id/changeProfile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.884"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.944" />
 
     <TextView
         android:id="@+id/textView7"
@@ -138,8 +169,12 @@
         android:text="DEGREES"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="7dp"
-        tools:layout_editor_absoluteY="558dp" />
+        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleName"
+        app:layout_constraintVertical_bias="0.766" />
 
     <TextView
         android:id="@+id/titleName"
