--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -20,10 +20,10 @@
         android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/profileImage"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.946"
+        app:layout_constraintHorizontal_bias="0.892"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.551" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/profileImage"
@@ -35,14 +35,14 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.782" />
+        app:layout_constraintVertical_bias="0.902" />
 
     <TextView
         android:id="@+id/n1"
         android:layout_width="255dp"
-        android:layout_height="42dp"
+        android:layout_height="32dp"
         android:background="@drawable/button_for_profile"
-        android:textColor="#3C3F41"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/n2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,9 +54,9 @@
     <TextView
         android:id="@+id/m1"
         android:layout_width="255dp"
-        android:layout_height="42dp"
+        android:layout_height="32dp"
         android:background="@drawable/button_for_profile"
-        android:textColor="#3C3F41"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/profileDegrees"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,18 +68,18 @@
     <TextView
         android:id="@+id/n2"
         android:layout_width="255dp"
-        android:layout_height="42dp"
+        android:layout_height="32dp"
         android:layout_marginTop="388dp"
         android:layout_marginBottom="43dp"
         android:background="@drawable/button_for_profile"
-        android:textColor="#3C3F41"
+        android:textColor="#FDFDFD"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/m1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.903"
+        app:layout_constraintHorizontal_bias="0.891"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.404" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView11"
@@ -88,13 +88,13 @@
         android:fontFamily="sans-serif-black"
         android:text="FIRST NAME"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/textView12"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleName"
-        app:layout_constraintVertical_bias="0.775" />
+        app:layout_constraintVertical_bias="0.706" />
 
     <TextView
         android:id="@+id/textView12"
@@ -103,13 +103,13 @@
         android:fontFamily="sans-serif-black"
         android:text="LAST NAME"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/textView13"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.003"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleName"
-        app:layout_constraintVertical_bias="0.875" />
+        app:layout_constraintVertical_bias="0.836" />
 
     <TextView
         android:id="@+id/textView13"
@@ -118,13 +118,13 @@
         android:fontFamily="sans-serif-black"
         android:text="EMAIL"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/textView7"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.003"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleName"
-        app:layout_constraintVertical_bias="0.832" />
+        app:layout_constraintVertical_bias="0.866" />
 
     <Button
         android:id="@+id/button3"
@@ -151,9 +151,9 @@
     <TextView
         android:id="@+id/profileDegrees"
         android:layout_width="255dp"
-        android:layout_height="87dp"
+        android:layout_height="80dp"
         android:background="@drawable/button_for_profile"
-        android:textColor="#3C3F41"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/changeProfile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.891"
@@ -168,7 +168,7 @@
         android:fontFamily="sans-serif-black"
         android:text="DEGREES"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.003"
@@ -178,15 +178,16 @@
 
     <TextView
         android:id="@+id/titleName"
-        android:layout_width="195dp"
-        android:layout_height="50dp"
+        android:layout_width="213dp"
+        android:layout_height="54dp"
         android:fontFamily="sans-serif-black"
         android:gravity="center"
-        android:textSize="20sp"
+        android:textColor="#000000"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/n1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.656" />
+        app:layout_constraintVertical_bias="0.768" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
