--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -6,12 +6,13 @@
     android:layout_height="wrap_content"
     android:background="@drawable/costum_row"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="100dp">
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="378dp"
+        android:layout_height="204dp"
+        android:background="@drawable/costum_row"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:text="Main title"
