--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -5,15 +5,17 @@
     android:id="@+id/third"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#3C3F41"
+    android:background="@drawable/clean_back_third"
     tools:context=".mainPageFragments.SettingsFragment">
 
     <Button
         android:id="@+id/buttonPriAndPol"
         android:layout_width="277dp"
         android:layout_height="60dp"
-        android:background="@drawable/setting1"
-        android:backgroundTint="#E49D85"
+        android:background="@drawable/costum_button"
+        android:drawableRight="@drawable/ic_privacy"
+        android:gravity="center|left"
+        android:paddingLeft="10dp"
         android:shadowColor="#FFFFFF"
         android:text="Privacy and Policy"
         android:textColor="#FFFFFF"
@@ -29,8 +31,10 @@
         android:id="@+id/buttonReport"
         android:layout_width="277dp"
         android:layout_height="60dp"
-        android:background="@drawable/setting1"
-        android:backgroundTint="#a3c3b6"
+        android:background="@drawable/costum_button"
+        android:drawableRight="@drawable/ic_launcher_email1"
+        android:gravity="center|left"
+        android:paddingLeft="10dp"
         android:text="Report a problem"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
@@ -45,8 +49,10 @@
         android:id="@+id/buttonAboutUs"
         android:layout_width="277dp"
         android:layout_height="60dp"
-        android:background="@drawable/setting1"
-        android:backgroundTint="#5adcdd"
+        android:background="@drawable/costum_button"
+        android:drawableRight="@drawable/ic_about_us"
+        android:gravity="center|left"
+        android:paddingLeft="10dp"
         android:text="about us"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
@@ -61,9 +67,10 @@
         android:id="@+id/textView2"
         android:layout_width="277dp"
         android:layout_height="60dp"
-        android:background="@drawable/setting1"
+        android:background="@drawable/costum_button"
         android:fontFamily="sans-serif-medium"
-        android:gravity="center"
+        android:gravity="center|left"
+        android:paddingLeft="10dp"
         android:text="NOTIFICATIONS"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
